Package_Tools/include-C/dbus-1.0/dbus/dbus_message.h

#define DBUS_MESSAGE_H
/**
 * @addtogroup DBusMessage
 * @{
 */

typedef struct DBusMessage DBusMessage;
/**
 * Opaque type representing a message iterator. Can be copied by value and
 * allocated on the stack.
 *
 * A DBusMessageIter usually contains no allocated memory. However, there
 * is one special case: after a successful call to
 * dbus_message_iter_open_container(), the caller is responsible for calling
 * either dbus_message_iter_close_container() or
 * dbus_message_iter_abandon_container() exactly once, with the same pair
 * of iterators.
 */
typedef struct DBusMessageIter DBusMessageIter;
/**
 * DBusMessageIter struct; contains no public fields. 
 */
struct DBusMessageIter
{ 
  void *dummy1;         /**< Don't use this */
  void *dummy2;         /**< Don't use this */
  dbus_uint32_t dummy3; /**< Don't use this */
  int dummy4;           /**< Don't use this */
  int dummy5;           /**< Don't use this */
  int dummy6;           /**< Don't use this */
  int dummy7;           /**< Don't use this */
  int dummy8;           /**< Don't use this */
  int dummy9;           /**< Don't use this */
  int dummy10;          /**< Don't use this */
  int dummy11;          /**< Don't use this */
  int pad1;             /**< Don't use this */
  void *pad2;           /**< Don't use this */
  void *pad3;           /**< Don't use this */
};
/**
 * A message iterator for which dbus_message_iter_abandon_container_if_open()
 * is the only valid operation.
 */
/* xxxxxxxxxxxxxxxxx
#define DBUS_MESSAGE_ITER_INIT_CLOSED \
{ \
  NULL, 
  NULL, 
  0, 
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  NULL,
  NULL 
}
*/

extern
DBusMessage* dbus_message_new               (int          message_type);
extern
DBusMessage* dbus_message_new_method_call   (const char  *bus_name,
                                             const char  *path,
                                             const char  *iface,
                                             const char  *method);
extern
DBusMessage* dbus_message_new_method_return (DBusMessage *method_call);
extern
DBusMessage* dbus_message_new_signal        (const char  *path,
                                             const char  *iface,
                                             const char  *name);
extern
DBusMessage* dbus_message_new_error         (DBusMessage *reply_to,
                                             const char  *error_name,
                                             const char  *error_message);
extern
DBusMessage* dbus_message_new_error_printf  (DBusMessage *reply_to,
                                             const char  *error_name,
                                             const char  *error_format,
                                             ...) ;
extern
DBusMessage* dbus_message_copy              (const DBusMessage *message);
extern
DBusMessage*  dbus_message_ref              (DBusMessage   *message);
extern
void          dbus_message_unref            (DBusMessage   *message);
extern
int           dbus_message_get_type         (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_set_path         (DBusMessage   *message,
                                             const char    *object_path);
extern
const char*   dbus_message_get_path         (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_has_path         (DBusMessage   *message, 
                                             const char    *object_path);
  
extern
dbus_bool_t   dbus_message_set_interface    (DBusMessage   *message,
                                             const char    *iface);
extern
const char*   dbus_message_get_interface    (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_has_interface    (DBusMessage   *message, 
                                             const char    *iface);
extern
dbus_bool_t   dbus_message_set_member       (DBusMessage   *message,
                                             const char    *member);
extern
const char*   dbus_message_get_member       (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_has_member       (DBusMessage   *message, 
                                             const char    *member);
extern
dbus_bool_t   dbus_message_set_error_name   (DBusMessage   *message,
                                             const char    *name);
extern
const char*   dbus_message_get_error_name   (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_set_destination  (DBusMessage   *message,
                                             const char    *destination);
extern
const char*   dbus_message_get_destination  (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_set_sender       (DBusMessage   *message,
                                             const char    *sender);
extern
const char*   dbus_message_get_sender       (DBusMessage   *message);
extern
const char*   dbus_message_get_signature    (DBusMessage   *message);
extern
void          dbus_message_set_no_reply     (DBusMessage   *message,
                                             dbus_bool_t    no_reply);
extern
dbus_bool_t   dbus_message_get_no_reply     (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_is_method_call   (DBusMessage   *message,
                                             const char    *iface,
                                             const char    *method);
extern
dbus_bool_t   dbus_message_is_signal        (DBusMessage   *message,
                                             const char    *iface,
                                             const char    *signal_name);
extern
dbus_bool_t   dbus_message_is_error         (DBusMessage   *message,
                                             const char    *error_name);
extern
dbus_bool_t   dbus_message_has_destination  (DBusMessage   *message,
                                             const char    *bus_name);
extern
dbus_bool_t   dbus_message_has_sender       (DBusMessage   *message,
                                             const char    *unique_bus_name);
extern
dbus_bool_t   dbus_message_has_signature    (DBusMessage   *message,
                                             const char    *signature);
extern
dbus_uint32_t dbus_message_get_serial       (DBusMessage   *message);
extern
void          dbus_message_set_serial       (DBusMessage   *message, 
                                             dbus_uint32_t  serial);
extern
dbus_bool_t   dbus_message_set_reply_serial (DBusMessage   *message,
                                             dbus_uint32_t  reply_serial);
extern
dbus_uint32_t dbus_message_get_reply_serial (DBusMessage   *message);
extern
void          dbus_message_set_auto_start   (DBusMessage   *message,
                                             dbus_bool_t    auto_start);
extern
dbus_bool_t   dbus_message_get_auto_start   (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_get_path_decomposed (DBusMessage   *message,
                                                char        ***path);
extern
const char   *dbus_message_get_container_instance (DBusMessage   *message);
extern
dbus_bool_t   dbus_message_set_container_instance (DBusMessage   *message,
                                                   const char    *object_path);
extern
dbus_bool_t dbus_message_append_args          (DBusMessage     *message,
					       int              first_arg_type,
					       ...);
extern
dbus_bool_t dbus_message_append_args_valist   (DBusMessage     *message,
					       int              first_arg_type,
					       va_list          var_args);
extern
dbus_bool_t dbus_message_get_args             (DBusMessage     *message,
					       DBusError       *error,
					       int              first_arg_type,
					       ...);
extern
dbus_bool_t dbus_message_get_args_valist      (DBusMessage     *message,
					       DBusError       *error,
					       int              first_arg_type,
					       va_list          var_args);
extern
dbus_bool_t dbus_message_contains_unix_fds    (DBusMessage *message);
extern
void        dbus_message_iter_init_closed        (DBusMessageIter *iter);
extern
dbus_bool_t dbus_message_iter_init             (DBusMessage     *message,
                                                DBusMessageIter *iter);
extern
dbus_bool_t dbus_message_iter_has_next         (DBusMessageIter *iter);
extern
dbus_bool_t dbus_message_iter_next             (DBusMessageIter *iter);
extern
char*       dbus_message_iter_get_signature    (DBusMessageIter *iter);
extern
int         dbus_message_iter_get_arg_type     (DBusMessageIter *iter);
extern
int         dbus_message_iter_get_element_type (DBusMessageIter *iter);
extern
void        dbus_message_iter_recurse          (DBusMessageIter *iter,
                                                DBusMessageIter *sub);
extern
void        dbus_message_iter_get_basic        (DBusMessageIter *iter,
                                                void            *value);
extern
int         dbus_message_iter_get_element_count(DBusMessageIter *iter);
/* This function returns the wire protocol size of the array in bytes,
 * you do not want to know that probably
 */
extern
/*DBUS_DEPRECATED*/ int         dbus_message_iter_get_array_len    (DBusMessageIter *iter);
extern
dbus_bool_t dbus_message_iter_open_container     (DBusMessageIter *iter,
                                                  int              type,
                                                  const char      *contained_signature,
                                                  DBusMessageIter *sub);
extern
dbus_bool_t dbus_message_iter_close_container    (DBusMessageIter *iter,
                                                  DBusMessageIter *sub);
extern
void        dbus_message_iter_abandon_container  (DBusMessageIter *iter,
                                                  DBusMessageIter *sub);
extern
void        dbus_message_iter_abandon_container_if_open (DBusMessageIter *iter,
                                                         DBusMessageIter *sub);